--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy": "ng build --prod --base-href=miguelmatg.github.io/AvantZen/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
